# quadcopter_simulator

./: CMakeLists.txt  LICENSE  package.xml
config/: quadcopter_params.yaml  traj_1_params.yaml  traj_circle_params.yaml  traj_heli_circle_params.yaml  trajectory_crescent.yaml  trajectory_hover.yaml  trajectory_manager.yaml  trajectory_pid_tuning.yaml  trajectory_random.yaml  trajectory_random_2.yaml  trajectory_random_3.yaml
deprecated/: circle_traj.cpp
include/quadcopter_control/: base_class.h  data_logger.h  mid_level_cont.h  trajectory_generator.h  waypoint_server.h
launch/: sim_display.launch
log/: ref_pose.txt  states.txt
meshes/: quad_cad.dae
quadcopter_control/config/: quadcopter_params.yaml  traj_1_params.yaml
quadcopter_control/launch/: real_time_controller.launch
quadcopter_control/log/: ref_pose.txt
quadcopter_control/src/: circle_heli_traj.cpp  data_logger.cpp  eom.cpp  mid_level_cont.cpp  real_time_control.cpp  trajectory_generator.cpp
quadcopter_control/urdf/: quad_cad.urdf
rviz/: quad_rviz.rviz
scripts/: actual_acc_x_t.m  actual_acc_y_t.m  actual_acc_z_t.m  actual_angvel_x_t.m  actual_angvel_y_t.m  actual_angvel_z_t.m  actual_plot_3d_xyz.m  actual_vel_x_t.m  actual_vel_y_t.m  actual_vel_z_t.m  actual_x_t.m  actual_y_t.m  actual_z_t.m  main.m  ref_plot_3d_xyz.m  ref_x_t.m  ref_y_t.m  ref_z_t.m
src/: base_class.cpp  data_logger.cpp  data_logger_node.cpp  eom.cpp  low_level_cont.cpp  mid_level_cont.cpp  mid_level_cont_node.cpp  real_time_control.cpp  rviz_data.cpp  trajectory_generator.cpp  trajectory_generator_node.cpp  waypoint_server.cpp  waypoint_server_node.cpp
srv/: WaypointService.srv
